--- a/template/layout/_master.tmpl
+++ b/template/layout/_master.tmpl
@@ -156,6 +156,7 @@
       </div>
     </footer>
     {{/_enableFooter}}
+    <script type="text/javascript" src="/public/questionAnswer.js"></script>
   </body>
   {{/redirect_url}}
 </html>
