--- a/template/public/main.css
+++ b/template/public/main.css
@@ -26,7 +26,7 @@
   color: #d45d35;
   font-weight: bold;
   border-left: 2px solid #d45d35;
-  padding-left: 5px;
+  padding-left: 0.3rem;
   transition: all 0.2s ease-in-out;
 }
 
@@ -36,18 +36,14 @@
 }
 
 #breadcrumb {
-  min-height: 40px;
+  min-height: 2.5rem;
 }
-
-/* @view-transition {
-  navigation: none;
-} */
 
 .navbar-brand img {
-  height: 33px;
+  height: 2rem;
   width: auto;
+  margin-right: 0.5rem;
 }
-
 
 /*******************************************************************************
 *** Section: Question and Answer Sections
