--- a/template/layout/_master.tmpl
+++ b/template/layout/_master.tmpl
@@ -19,7 +19,7 @@
       <link rel="stylesheet" href="{{_rel}}public/docfx.min.css">
       <link rel="stylesheet" href="{{_rel}}public/main.css">
       <meta name="docfx:navrel" content="{{_navRel}}">
-      <meta name="docfx:tocrel" content="{{_tocRel}}">
+      <meta name="docfx:tocrel" content="{{_rel}}sessions/toc.json">
       {{#_noindex}}<meta name="searchOption" content="noindex">{{/_noindex}}
       {{#_enableSearch}}<meta name="docfx:rel" content="{{_rel}}">{{/_enableSearch}}
       {{#_disableNewTab}}<meta name="docfx:disablenewtab" content="true">{{/_disableNewTab}}
@@ -147,7 +147,7 @@
     <div class="container-xxl search-results" id="search-results"></div>
     {{/_enableSearch}}
 
-    {{#_enableFooter}}
+    {{^_disableFooter}}
     <footer class="border-top text-secondary">
       <div class="container-xxl">
         <div class="flex-fill">
@@ -155,7 +155,7 @@
         </div>
       </div>
     </footer>
-    {{/_enableFooter}}
+    {{/_disableFooter}}
   </body>
   {{/redirect_url}}
 </html>
