--- a/template/layout/_master.tmpl
+++ b/template/layout/_master.tmpl
@@ -25,7 +25,7 @@
       {{#_disableNewTab}}<meta name="docfx:disablenewtab" content="true">{{/_disableNewTab}}
       {{#_disableTocFilter}}<meta name="docfx:disabletocfilter" content="true">{{/_disableTocFilter}}
       {{#docurl}}<meta name="docfx:docurl" content="{{docurl}}">{{/docurl}}
-      <meta name="loc:inThisArticle" content="{{__global.inThisArticle}}">
+      <meta name="loc:inThisArticle" content="{{title}}">
       <meta name="loc:searchResultsCount" content="{{__global.searchResultsCount}}">
       <meta name="loc:searchNoResults" content="{{__global.searchNoResults}}">
       <meta name="loc:tocFilter" content="{{__global.tocFilter}}">
