--- a/template/public/main.css
+++ b/template/public/main.css
@@ -1,30 +1,31 @@
 :root {
   --mg-orange-dark-rgb: 231, 60, 0;
+  --mg-orange-dark-secondary-rgb: 96, 62, 51;
   --mg-orange-light-rgb: 212, 93, 53;
-  --theme-secondary-rgb: 32, 164, 230;
+  --mg-orange-light-secondary-rgb: 229, 193, 179;
+  --mg-grey-rgb: 108, 117, 125;
   --mg-orange-dark: rgba(var(--mg-orange-dark-rgb), 1);
+  --mg-orange-dark-secondary: rgba(var(--mg-orange-dark-secondary-rgb), 1);
   --mg-orange-light: rgba(var(--mg-orange-light-rgb), 1);
-  --theme-secondary: rgba(var(--theme-secondary-rgb), 1);
+  --mg-orange-light-secondary: rgba(var(--mg-orange-light-secondary-rgb), 1);
+  --mg-grey: rgba(var(--mg-grey-rgb), 1);
+
+  --bs-link-color-rgb: var(--mg-orange-light-rgb);
+  --bs-link-hover-color-rgb: var(--mg-orange-dark-rgb);
 }
 
 [data-bs-theme="light"] {
-  --mg-orange-primary: var(--mg-orange-dark);
-  --mg-orange-primary-rgb: var(--mg-orange-dark-rgb);
-  --mg-orange-secondary: var(--mg-orange-light);
-  --mg-orange-secondary-rgb: var(--mg-orange-light-rgb);
-
-  --bs-link-color-rgb: var(--mg-orange-dark-rgb);
-  --bs-link-hover-color-rgb: var(--mg-orange-light-rgb);
+  --mg-orange-primary: var(--mg-orange-light);
+  --mg-orange-primary-rgb: var(--mg-orange-light-rgb);
+  --mg-orange-secondary: var(--mg-orange-light-secondary);
+  --mg-orange-secondary-rgb: var(--mg-orange-light-secondary-rgb);
 }
 
 [data-bs-theme="dark"] {
   --mg-orange-primary: var(--mg-orange-light);
   --mg-orange-primary-rgb: var(--mg-orange-light-rgb);
-  --mg-orange-secondary: var(--mg-orange-dark);
-  --mg-orange-secondary-rgb: var(--mg-orange-dark-rgb);
-
-  --bs-link-color-rgb: var(--mg-orange-light-rgb);
-  --bs-link-hover-color-rgb: var(--mg-orange-dark-rgb);
+  --mg-orange-secondary: var(--mg-orange-dark-secondary);
+  --mg-orange-secondary-rgb: var(--mg-orange-dark-secondary-rgb);
 }
 
 h1 {
@@ -33,9 +34,9 @@ h1 {
 
 #affix ul li a.active,
 #affix a.active {
-  color: #d45d35;
+  color: var(--mg-orange-primary);
   font-weight: bold;
-  border-left: 2px solid #d45d35;
+  border-left: 2px solid var(--mg-orange-primary);
   padding-left: 0.3rem;
   transition: all 0.2s ease-in-out;
 }
@@ -49,14 +50,22 @@ h1 {
   min-height: 3rem;
 }
 
+.navbar{
+  background-color: var(--mg-orange-primary);
+}
+
 .navbar-brand img {
   height: 2rem;
   width: auto;
   margin-right: 0.5rem;
 }
 
+.navbar #navbar form>input {
+  background-color: rgba(var(--mg-orange-secondary-rgb), 0.4);
+}
+
 #search-results>.sr-items .sr-item>.item-href {
-  color: var(--theme-secondary);
+  color: var(--mg-grey);
 }
 
 /*******************************************************************************
@@ -72,7 +81,7 @@ details.generated-details {
 }
 
 details.generated-details:focus-within {
-  box-shadow: 0 0 0 0.2rem rgba(var(--mg-orange-secondary-rgb), 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(var(--mg-orange-primary-rgb), 0.25);
 }
 
 details.generated-details > summary {
@@ -96,7 +105,7 @@ details.generated-details > summary::-webkit-details-marker {
 
 details.generated-details > div {
   padding: 1rem;
-  background-color: rgba(var(--mg-orange-primary-rgb), 0.4) !important;
+  background-color: rgba(var(--mg-orange-primary-rgb), 0.4);
 }
 
 details.generated-details > summary::before {
