fix menu and padding scrollbug

--- a/template/layout/_master.tmpl
+++ b/template/layout/_master.tmpl
@@ -88,7 +88,7 @@
     <main class="container-xxl">
       {{^_disableToc}}
       <div class="toc-offcanvas">
-        <div class="offcanvas-md offcanvas-start" tabindex="-1" id="tocOffcanvas" aria-labelledby="tocOffcanvasLabel">
+        <div class="offcanvas-md offcanvas-start" tabindex="-1" id="tocOffcanvas" aria-labelledby="tocOffcanvasLabel" data-bs-scroll="true">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="tocOffcanvasLabel">Table of Contents</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#tocOffcanvas" aria-label="Close"></button>
